# crl-amp

./: .gitignore  LICENSE  README.md  pyproject.toml
amp/cfg/amp/: amp_config.py  go1_config.py
amp/cfg/base/: base_config.py
amp/dataloader/: motion_loader.py  motion_util.py  pose3d.py
amp/envs/: __init__.py
amp/envs/amp/: amp_task.py
amp/envs/base/: base_task.py  observation_buffer.py
amp/resources/datasets/go1_motions/: MANN_01_mir_ret_go1_85_593_isaac.txt  MANN_01_ret_go1_85_593_isaac.txt
amp/resources/robots/go1/: go1.urdf
amp/resources/robots/go2/: go2.urdf
amp/runners/algorithms/: amp.py
amp/runners/modules/: actor_critic.py  discriminator.py  policy.py
amp/runners/storage/: replay_buffer.py  rollout_storage.py
amp/scripts/: interactive_play.py  replay_motion.py  train.py
amp/utils/: __init__.py  export.py  helpers.py  math.py  task_registry.py  terrain.py  utils.py  wandb_utils.py
dockerfiles/: Dockerfile
